--- a/about.html
+++ b/about.html
@@ -9,26 +9,31 @@
             <tr>
                 <td>Mobile</td>
                 <td>
-                    <!-- <a href="tel:+94717871494">+94 71 787 1494</a><br /> -->
-                    <a href="tel:+94757871494">+94 75 787 1494</a>
+                    <a href="tel:+94757871494">+94 75 787 1494</a><br />
+                    <a href="tel:+94767871494">+94 76 787 1494</a>
                 </td>
             </tr>
             <tr>
                 <td>Date of Birth</td>
-                <td>1994 May 24</td>
+                <td>24<sup>th</sup> May 1994</td>
             </tr>
             <tr>
                 <td>Address</td>
                 <td>Magalegoda, Veyangoda.</td>
             </tr>
+            <tr>
+                <td>Status</td>
+                <td>
+                    <span class="badge badge-success" style="font-size:1em;padding:.5em;">Actively looking for Internship</span>
+                </td>
+            </tr>
         </table>
     </div>
 
     <div class="col-md-10 mx-auto wow fadeIn">
-        <p style="text-align:justify;">Hello there I'm <span class="text-success">Nuwan Sameera
-                Alawatta</span> a 3rd year undergraduate at
-            University of Kelaniya, Full-Stack Developer & currently I'm <span class="text-success">actively looking for
-                internship</span> in Software Engineering/Development.</p>
+        <p style="text-align:justify;">Hello there I'm <span class="text-primary">Nuwan Sameera
+                Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm innovative 
+            </p>
         <div class="row text-left">
 
             <div class="col-md-10 mx-auto">
@@ -43,14 +48,14 @@
                     </tr>
                 </table>
             </div>
-            <div class="col-md-10 mx-auto">
+            <div class="col-md-6">
                 English <small>(Professional)</small>
                 <div class="progress mb-3">
                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                         aria-valuemax="100" style="width: 60%"></div>
                 </div>
             </div>
-            <div class="col-md-10 mx-auto">
+            <div class="col-md-6 mx-auto">
                 Sinhala <small>(Native)</small>
                 <div class="progress mb-3">
                     <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
@@ -109,7 +114,8 @@
                     class="fab fa-deviantart m-1 wow bounceIn"></i></a>
 
             <!-- <a href="#" target="_blank"><i class="fab fa-youtube  m-1 wow bounceIn"></i></a> -->
-
         </p>
+
+        <a href="https://sourcerer.io/nuwan94"><img src="https://sourcerer.io/icons/logo-sharing.svg"height="48px" alt="Sourcerer"></a>
     </div>
 </div>
