--- a/resume.html
+++ b/resume.html
@@ -1,20 +1,21 @@
-<div class="row wow fadeIn resume" ng-controller="resumeCtrl" ng-init="getResume('config/resume.json');">
-    <h3 class="m-3 col-md-12">Resume</h3>
-    <div class="col-md-8 mx-auto" ng-if="isNotLoaded">
-        <i class="fa fa-3x fa-spinner fa-pulse"></i>
-    </div>
-
+<div class="row wow fadeIn resume" ng-controller="resumeCtrl" ng-init="showWork()">
+    
     <div class="col-md-12 mx-auto mb-3 text-center sticky-nav">
         <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showWork()">Work</button>
         <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showEdu()">Education</button>
         <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showComm()">Communities</button>
         <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showCont()">Contests</button>
         <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showSkill()">Skills</button>
+        <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showTrain()">Workshops</button>
+    </div>
+
+    <h3 class="m-3 col-md-12">{{resu.title}}</h3>
+
+    <div class="col-md-8 mx-auto" ng-if="isNotLoaded">
+        <i class="fa fa-3x fa-spinner fa-pulse"></i>
     </div>
 
     <div class="col-md-12 text-left" ng-if="!isNotLoaded">
-
-        <h3 class="mt-5 mb-5 text-center">{{resu.title}}</h3>
 
         <div class="mt-3 mb-3 resume-item text-left wow fadeIn col-md-10 mx-auto" ng-repeat="r in resu">
 
