--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <tr>
                 <td>Status</td>
                 <td>
-                    <span class="badge badge-success" style="font-size:1em;padding:.5em;">Actively looking for Internship</span>
+                    <span class="badge badge-success" style="font-size:1em;padding:.5em;">Actively looking for an Internship</span>
                 </td>
             </tr>
         </table>
@@ -32,7 +32,7 @@
 
     <div class="col-md-10 mx-auto wow fadeIn">
         <p style="text-align:justify;">Hello there I'm <span class="text-primary">Nuwan Sameera
-                Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm innovative 
+                Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm look forward to getting involved in challenging and interesting projects which allow me to utilize and improve my skills.
             </p>
         <div class="row text-left">
 
@@ -116,6 +116,6 @@
             <!-- <a href="#" target="_blank"><i class="fab fa-youtube  m-1 wow bounceIn"></i></a> -->
         </p>
 
-        <a href="https://sourcerer.io/nuwan94"><img src="https://sourcerer.io/icons/logo-sharing.svg"height="48px" alt="Sourcerer"></a>
+        <!-- <a href="https://sourcerer.io/nuwan94"><img src="https://sourcerer.io/icons/logo-sharing.svg"height="48px" alt="Sourcerer"></a> -->
     </div>
 </div>
