--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
         <button type="button" class="btn btn-sm btn-light m-1 wow bounceIn" ng-click="showTrain()">Workshops</button>
     </div>
 
-    <h3 class="m-3 col-md-12">{{resu.title}}</h3>
+    <h3 class="m-3 col-md-12 wow fadeInUp" >{{resu.title}}</h3>
 
     <div class="col-md-8 mx-auto" ng-if="isNotLoaded">
         <i class="fa fa-3x fa-spinner fa-pulse"></i>
