--- a/about.html
+++ b/about.html
@@ -21,12 +21,14 @@
                 <td>Address</td>
                 <td>Magalegoda, Veyangoda.</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>Status</td>
                 <td>
-                    <span class="badge badge-success" style="font-size:1em;padding:.5em;">Actively looking for an Internship</span>
+                    <span class="badge badge-success" style="font-size:1em;padding:.5em;">
+                        Looking for a Job
+                    </span>
                 </td>
-            </tr>
+            </tr> -->
         </table>
     </div>
 
@@ -52,7 +54,7 @@
                 English <small>(Professional)</small>
                 <div class="progress mb-3">
                     <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                        aria-valuemax="100" style="width: 60%"></div>
+                        aria-valuemax="100" style="width: 70%"></div>
                 </div>
             </div>
             <div class="col-md-6 mx-auto">
