--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <div class="row m-3 text-center">
 
             <div class="col-md-6" title="Mobile">
-                <a href="tel:+94757871494" class="bg-dark contact-icon-link wow bounceIn">
+                <a href="tel:+94757871494" class="bg-dark contact-icon-link wow bounceIn" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                     <i class="fa fa-phone"></i>
                 </a>
             </div>
