--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
   <meta name="description"
-    content="Nuwan Sameera Alawatta is a Software Engineering Undergraduate in University of Kelaniya.">
+    content="Nuwan Sameera Alawatta is a Software Engineering Undergraduate in University of Kelaniya. Nuwan is currently working as a Trainee Associate Software Engineer at Zone24x7 Inc. His main interests are JavasScript, ">
   <meta name="author" content="Nuwan Alawatta">
   <meta name="msapplication-TileColor" content="#141A32">
   <meta name="theme-color" content="#141A32">
@@ -16,14 +16,19 @@
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Overpass:300,400,500,700,900" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="css/main.css" rel="stylesheet">
+  
+
+  <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/ui-bootstrap-tpls-2.5.0.min.js"></script>
   <script>
     new WOW({
       boxClass: 'wow',
@@ -32,12 +37,7 @@
       mobile: false,
       live: true
     }).init();
-    jQuery(function () {
-      jQuery('[data-toggle="tooltip"]').tooltip()
-    })
   </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
 
   <script src="js/app.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,7 +66,7 @@
           <div class="row m-3">
             <div class="col-md-12 mx-auto">
               <div>
-                <h2 class="title wow bounceInDown" data-wow-delay="50ms">Hello, I'm <span id="js-rotating">Nuwan</span>
+                <h2 class="title wow bounceInDown" data-wow-delay="50ms">Hello, I'm <span class="sprkly">Nuwan</span>
                 </h2>
                 <img src="img/profile_img.jpg" alt="Nuwan's Photo" class="mt-2 profile wow bounceIn">
               </div>
