--- a/stats.html
+++ b/stats.html
@@ -1,82 +1,68 @@
 <div class="row" ng-init="getStat()" ng-controller="statCtrl">
     <h3 class="m-3 col-md-12">Statistics</h3>
     <div class="col-md-8 mx-auto">
-        <div class="row mt-3 stat social-links">
 
+        <div class="row mt-3">
             <div class="col-md-12 m-5" ng-if="!(gitLoaded && soLoaded)">
                 <h5 style="text-align: center"><i class="fa fa-2x fa-spinner fa-pulse"></i></h5>
             </div>
+        </div>
 
-            <div class="col-md-6" ng-if="gitLoaded && soLoaded">
-                <a href='https://github.com/nuwan94' target="_blank">
-                    <i class='fab fa-github fa-2x wow bounceIn'></i> GitHub
-                </a><br>
-                <span class="text-warning">{{gh.public_repos}}</span> public repos<br>
-                <span class="text-warning">{{gh.public_gists}}</span> public gists<br>
+
+        <div class="row mt-3 stat social-links" ng-if="gitLoaded && soLoaded">
+
+
+            <!-- <div class="col-md-6 text-center">
+                <img class="img-fluid" src="img/octocat.png" />
+            </div> -->
+
+            <div class="col-md-12">
+                <div class="github-card" data-github="nuwan94" data-width="400" data-height="152" data-theme="default">
+                </div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                <!-- <a href='https://github.com/nuwan94' target="_blank">@nuwan94</a><br>
+                <span class="text-warning">{{gh.public_repos}}</span> repos & <span
+                    class="text-warning">{{gh.public_gists}}</span> gists<br>
                 Joined on <span class="text-warning">{{gh.created_at | date}}</span><br>
-                <span class="text-warning">{{gh.followers}}</span> followers<br>
+                Last seen on <span class="text-warning">{{gh.updated_at | date}}</span><br>
+                <span class="text-warning">{{gh.followers}}</span> followers & <span
+                    class="text-warning">{{gh.following}}</span> following<br> -->
             </div>
 
-            <div class="col-md-6" ng-if="gitLoaded && soLoaded">
-                <a href='https://stackoverflow.com/users/3125964/nuwan94' target="_blank">
-                    <i class='fab fa-stack-overflow fa-2x wow bounceIn'></i> Stackoverflow
-                </a><br>
+
+            <div class="col-md-6">
+                <!--                 <a href='https://stackoverflow.com/users/3125964/nuwan94' target="_blank">@nuwan94</a><br>
                 <span class="text-warning">{{so.reputation}}</span> total reps<br>
-                <span class="text-success"><i class="fa fa-caret-up"></i>{{so.reputation_change_month}}</span> month
+                <span class="{{(so.reputation_change_month > 0) ? 'text-success' : 'text-danger'}}">
+                    <i class="{{(so.reputation_change_month > 0) ? 'fa fa-caret-up' : 'fa fa-caret-down'}}"></i>
+                    {{so.reputation_change_month}}</span> month
                 &amp;
-                <span class="text-success"><i class="fa fa-caret-up"></i> {{so.reputation_change_year}}</span> year.<br>
+                <span class="{{(so.reputation_change_year > 0) ? 'text-success' : 'text-danger'}}">
+                    <i class="{{(so.reputation_change_year > 0) ? 'fa fa-caret-up' : 'fa fa-caret-down'}}"></i>
+                    {{so.reputation_change_year}}</span> year.
+                <br>
                 Joined on <span class="text-warning">{{so.creation_date*1000 | date}}</span><br>
+                Last seen on <span class="text-warning">{{so.last_access_date*1000 | date}}</span><br>
                 <span class="badge badge-primary">
                     {{so.badge_counts.bronze}} Bronze</span>
-                <span class="badge badge-primary"">{{so.badge_counts.silver}} Silver</span>
-                <!-- <span class=" badge badge-primary">{{stackoverflow.badge_counts.gold}} Gold</span> -->
+                <span class="badge badge-primary">{{so.badge_counts.silver}} Silver</span>
+                <span class=" badge badge-primary">{{stackoverflow.badge_counts.gold}} Gold</span> -->
+                <a href="https://stackexchange.com/users/3760956"><img style="border-radius: 5px;"
+                        src="https://stackexchange.com/users/flair/3760956.png?theme=clean" width="208" height="58"
+                        alt="profile for Nuwan94 on Stack Exchange, a network of free, community-driven Q&amp;A sites"
+                        title="profile for Nuwan94 on Stack Exchange, a network of free, community-driven Q&amp;A sites"></a>
             </div>
 
-            <div class="col-md-12" ng-if="gitLoaded && soLoaded">
-                <a href='https://www.hackerrank.com/nsa94' target="_blank">
-                    <i class="fab fa-hackerrank fa-2x mb-2 wow bounceIn"></i> Hackerrank
-                </a><br>
-                <span class="text-success">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </span> - Problem Solving<br>
-                <span class="text-success">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </span> - Java<br>
-                <span class="text-success">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </span> - Python<br>
-                <span class="text-success">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                </span> - SQL<br>
-                <span class="text-success">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </span> - Statistics<br>
+            <div class="col-md-6">
+                <a href="https://www.hackthebox.eu/profile/159870" target="_blank">
+                    <img src="https://www.hackthebox.eu/badge/image/159870" alt="Hack The Box">
+                </a>
             </div>
+
+            <div class="col-md-6">
+
+            </div>
+
         </div>
     </div>
 </div>
