--- a/about.html
+++ b/about.html
@@ -34,8 +34,9 @@
 
     <div class="col-md-10 mx-auto wow fadeIn">
         <p style="text-align:justify;">Hello there I'm <span class="text-primary">Nuwan Sameera
-                Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm look forward to getting involved in challenging and interesting projects which allow me to utilize and improve my skills.
-            </p>
+                Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm look forward to getting involved
+            in challenging and interesting projects which allow me to utilize and improve my skills.
+        </p>
         <div class="row text-left">
 
             <div class="col-md-10 mx-auto">
@@ -71,51 +72,66 @@
         <p class="social-links col">
 
             <a href='https://www.facebook.com/nsa94' target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class='fab fa-facebook-f m-1 wow bounceIn'></i></a>
+                    class='fab fa-facebook-f  wow bounceIn'></i></a>
 
             <a href='https://twitter.com/_nsa94' target="_blank" data-toggle="tooltip" title="_nsa94"><i
-                    class='fab fa-twitter wow m-1 bounceIn'></i></a>
+                    class='fab fa-twitter wow  bounceIn'></i></a>
 
             <a href='https://lk.linkedin.com/in/nsa94' target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class='fab fa-linkedin m-1 wow bounceIn'></i></a>
+                    class='fab fa-linkedin  wow bounceIn'></i></a>
 
             <a href='https://github.com/nuwan94' target="_blank" data-toggle="tooltip" title="nuwan94"><i
-                    class='fab fa-github m-1 wow bounceIn'></i></a>
+                    class='fab fa-github  wow bounceIn'></i></a>
 
             <a href='https://gitlab.com/nsa94' target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class='fab fa-gitlab m-1 wow bounceIn'></i></a>
+                    class='fab fa-gitlab  wow bounceIn'></i></a>
 
             <a href="https://medium.com/@nsa94" target="_blank" data-toggle="tooltip" title="@nsa94"><i
-                    class="fab fa-medium m-1 wow bounceIn"></i></a>
+                    class="fab fa-medium  wow bounceIn"></i></a>
 
             <a href='https://stackoverflow.com/users/3125964/nuwan94' target="_blank" data-toggle="tooltip"
-                title="nuwan94"><i class='fab fa-stack-overflow m-1 wow bounceIn'></i></a>
+                title="nuwan94"><i class='fab fa-stack-overflow  wow bounceIn'></i></a>
+
+            <a href='https://www.qwiklabs.com/public_profiles/efc8d645-af9d-4af3-befe-b6472f2c7b3b' target="_blank"
+                data-toggle="tooltip" title="QwikLabs Public Profile"><i class='fa fa-bullseye  wow bounceIn'></i></a>
+
+            <a href='' target="_blank" data-toggle="tooltip" title="AWS Educate"><i
+                    class='fab fa-aws  wow bounceIn'></i></a>
 
             <a href="https://www.hackerrank.com/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class="fab fa-hackerrank m-1 wow bounceIn"></i></a>
+                    class="fab fa-hackerrank  wow bounceIn"></i></a>
 
             <a href="https://www.codepen.io/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class="fab fa-codepen m-1 wow bounceIn"></i></a>
+                    class="fab fa-codepen  wow bounceIn"></i></a>
 
             <a href="https://www.freecodecamp.org/nuwan94" target="_blank" data-toggle="tooltip" title="nuwan94"><i
-                    class="fab fa-free-code-camp m-1 wow bounceIn"></i></a>
+                    class="fab fa-free-code-camp  wow bounceIn"></i></a>
 
             <a href="https://dev.to/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class="fab fa-dev m-1 wow bounceIn"></i></a>
+                    class="fab fa-dev  wow bounceIn"></i></a>
+
+            <a href="https://www.hackthebox.eu/home/users/profile/159870" target="_blank" data-toggle="tooltip"
+                title="nsa94"><i class="fa fa-box-open  wow bounceIn"></i></a>
 
             <a href="https://www.reddit.com/user/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class="fab fa-reddit  m-1 wow bounceIn"></i></a>
+                    class="fab fa-reddit wow bounceIn"></i></a>
 
-            <a href="https://www.quora.com/profile/Nuwan-Sameera-Alawatta" target="_blank" data-toggle="tooltip"
-                title="Nuwan-Sameera-Alawatta"><i class="fab fa-quora m-1 wow bounceIn"></i></a>
+            <!-- <a href="https://www.quora.com/profile/Nuwan-Sameera-Alawatta" target="_blank" data-toggle="tooltip"
+                title="Nuwan-Sameera-Alawatta"><i class="fab fa-quora  wow bounceIn"></i></a> -->
 
             <a href="https://www.behance.net/nsa94/" target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class="fab fa-behance m-1 wow bounceIn"></i></a>
+                    class="fab fa-behance wow bounceIn"></i></a>
+
+            <a href="https://www.instagram.com/_nsa94/" target="_blank" data-toggle="tooltip" title="_nsa94"><i
+                    class="fab fa-instagram wow bounceIn"></i></a>
+
 
             <a href="https://www.deviantart.com/nsa94" target="_blank" data-toggle="tooltip" title="nsa94"><i
-                    class="fab fa-deviantart m-1 wow bounceIn"></i></a>
+                    class="fab fa-deviantart wow bounceIn"></i></a>
 
-            <!-- <a href="#" target="_blank"><i class="fab fa-youtube  m-1 wow bounceIn"></i></a> -->
+
+
+            <!-- <a href="#" target="_blank"><i class="fab fa-youtube   wow bounceIn"></i></a> -->
         </p>
 
         <!-- <a href="https://sourcerer.io/nuwan94"><img src="https://sourcerer.io/icons/logo-sharing.svg"height="48px" alt="Sourcerer"></a> -->
