--- a/stats.html
+++ b/stats.html
@@ -17,9 +17,9 @@
             </div> -->
 
             <div class="col-md-12">
+                <script src="https://cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                 <div class="github-card" data-github="nuwan94" data-width="400" data-height="152" data-theme="default">
                 </div>
-                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                 <!-- <a href='https://github.com/nuwan94' target="_blank">@nuwan94</a><br>
                 <span class="text-warning">{{gh.public_repos}}</span> repos & <span
                     class="text-warning">{{gh.public_gists}}</span> gists<br>
