--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
 
         <div class="row m-3 text-center">
 
-            <div class="col-md-6" title="Mobile">
-                <a href="tel:+94757871494" class="bg-dark contact-icon-link wow bounceIn" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+            <div class="col-md-6">
+                <a href="tel:+94757871494" class="bg-dark contact-icon-link wow bounceIn">
                     <i class="fa fa-phone"></i>
                 </a>
             </div>
 
-            <div class="col-md-6" title="Email">
+            <div class="col-md-6">
                 <a href="mailto:nuwansalawatta@gmail.com" class="bg-danger contact-icon-link wow bounceIn">
                     <i class="fa fa-envelope"></i>
                 </a>
@@ -19,39 +19,39 @@
         </div>
         <div class="row m-3 text-center">
 
-            <div class="col-md-4" title="Skype">
+            <div class="col-md-4">
                 <a href="skype:live:nuwanalawatta" class="contact-icon-link wow bounceIn"
                     style="background-color: #00aff0;" target="_blank">
                     <i class="fab fa-skype"></i>
                 </a>
             </div>
 
-            <div class="col-md-4" title="Whatsapp">
+            <div class="col-md-4">
                 <a href="https://wa.me/94757871494" class="contact-icon-link wow bounceIn"
-                    style="background-color: #25d366;" target="_blank" data-toggle="tooltip" title="+94757871494">
+                    style="background-color: #25d366;" target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
 
-            <div class="col-md-4" title="Messenger">
+            <div class="col-md-4">
                 <a href="https://m.me/nsa94" class="contact-icon-link wow bounceIn" style="background-color: #0084ff;"
-                    target="_blank" data-toggle="tooltip" title="messenger/nsa94">
+                    target="_blank">
                     <i class="fab fa-facebook-messenger"></i>
                 </a>
             </div>
 
         </div>
         <div class="row m-3 text-center">
-                <div class="col-md-2 d-none d-md-block"></div>
+            <div class="col-md-2 d-none d-md-block"></div>
 
-            <div class="col-md-4" title="Telegram">
-                <a href="https://t.me/nuwan94" class="contact-icon-link wow bounceIn"
-                    style="background-color: #0088cc;" target="_blank">
+            <div class="col-md-4">
+                <a href="https://t.me/nuwan94" class="contact-icon-link wow bounceIn" style="background-color: #0088cc;"
+                    target="_blank">
                     <i class="fab fa-telegram"></i>
                 </a>
             </div>
 
-            <div class="col-md-4" title="Discord">
+            <div class="col-md-4">
                 <a href="https://discord.gg/aWkvfur" class="contact-icon-link wow bounceIn"
                     style="background-color: #7289da;" target="_blank">
                     <i class="fab fa-discord"></i>
