--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Overpass:300,400,500,700,900" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="css/main.css" rel="stylesheet">
-  
+
 
   <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -68,7 +68,9 @@
               <div>
                 <h2 class="title wow bounceInDown" data-wow-delay="50ms">Hello, I'm <span class="sprkly">Nuwan</span>
                 </h2>
-                <img src="img/profile_img.jpg" alt="Nuwan's Photo" class="mt-2 profile wow bounceIn">
+                <a href="#">
+                  <img src="img/profile_img.jpg" alt="Nuwan's Photo" class="mt-2 profile wow bounceIn">
+                </a>
               </div>
             </div>
           </div>
