--- a/about.html
+++ b/about.html
@@ -3,54 +3,35 @@
     <div class="col-md-8 mx-auto">
         <table class="table mainT wow fadeIn">
             <tr>
-                <td>Email</td>
-                <td><a href="mailto:hello@nuwan.dev">hello@nuwan.dev</a></td>
+                <td><i class="fa fa-fw fa-inbox text-primary"></i> Email</td>
+                <td><a class="text-primary" href="mailto:hello@nuwan.dev">hello@nuwan.dev</a></td>
             </tr>
             <tr>
-                <td>Mobile</td>
+                <td><i class="fa fa-fw fa-mobile-alt text-primary"></i> Mobile</td>
                 <td>
-                    <a href="tel:+94757871494">+94 75 787 1494</a><br />
-                    <a href="tel:+94767871494">+94 76 787 1494</a>
+                    <a class="text-primary" href="tel:+94757871494">+94 75 787 1494</a><br />
+                    <a class="text-primary" href="tel:+94767871494">+94 76 787 1494</a>
                 </td>
             </tr>
             <tr>
-                <td>Date of Birth</td>
+                <td><i class="fa fa-fw  fa-calendar-alt text-primary"></i> Date of Birth</td>
                 <td>24<sup>th</sup> May 1994</td>
             </tr>
             <tr>
-                <td>Address</td>
+                <td><i class="fa fa-fw fa-map-marker-alt text-primary"></i> Address</td>
                 <td>Magalegoda, Veyangoda.</td>
             </tr>
-            <!-- <tr>
-                <td>Status</td>
-                <td>
-                    <span class="badge badge-success" style="font-size:1em;padding:.5em;">
-                        Looking for a Job
-                    </span>
-                </td>
-            </tr> -->
         </table>
     </div>
 
     <div class="col-md-10 mx-auto wow fadeIn">
-        <p style="text-align:justify;">Hello there I'm <span class="text-primary">Nuwan Sameera
-                Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm look forward to getting involved
-            in challenging and interesting projects which allow me to utilize and improve my skills.
-        </p>
-        <div class="row text-left">
 
-            <div class="col-md-10 mx-auto">
-                <table class="table">
-                    <tr>
-                        <td>Coding Style</td>
-                        <td>Egyptian Brackets</td>
-                    </tr>
-                    <tr>
-                        <td>Indentation Style</td>
-                        <td>Tabs</td>
-                    </tr>
-                </table>
-            </div>
+        <div class="row text-left">
+            <p style="text-align:justify;padding:0.5em">Hello there I'm <span class="text-primary">Nuwan Sameera
+                    Alawatta</span>, level 3 undergraduate at University of Kelaniya. I'm look forward to getting
+                involved
+                in challenging and interesting projects which allow me to utilize and improve my skills.
+            </p>
             <div class="col-md-6">
                 English <small>(Professional)</small>
                 <div class="progress mb-3">
@@ -65,6 +46,19 @@
                         aria-valuemax="100" style="width: 100%"></div>
                 </div>
             </div>
+            <div class="col-md-10 mx-auto">
+                <table class="table">
+                    <tr>
+                        <td><i class="fa fa-code text-primary fa-fw"></i> Coding Style</td>
+                        <td>Egyptian Brackets</td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-indent text-primary fa-fw"></i> Indentation Style</td>
+                        <td>Tabs</td>
+                    </tr>
+                </table>
+            </div>
+
         </div>
     </div>
 
