--- a/about.html
+++ b/about.html
@@ -1,28 +1,5 @@
 <div class="row about">
     <h3 class="m-3 col-md-12">About</h3>
-    <div class="col-md-8 mx-auto">
-        <table class="table mainT wow fadeIn">
-            <tr>
-                <td><i class="fa fa-fw fa-inbox text-primary"></i> Email</td>
-                <td><a class="text-primary" href="mailto:hello@nuwan.dev">hello@nuwan.dev</a></td>
-            </tr>
-            <tr>
-                <td><i class="fa fa-fw fa-mobile-alt text-primary"></i> Mobile</td>
-                <td>
-                    <a class="text-primary" href="tel:+94757871494">+94 75 787 1494</a><br />
-                    <a class="text-primary" href="tel:+94767871494">+94 76 787 1494</a>
-                </td>
-            </tr>
-            <tr>
-                <td><i class="fa fa-fw  fa-calendar-alt text-primary"></i> Date of Birth</td>
-                <td>24<sup>th</sup> May 1994</td>
-            </tr>
-            <tr>
-                <td><i class="fa fa-fw fa-map-marker-alt text-primary"></i> Address</td>
-                <td>Magalegoda, Veyangoda.</td>
-            </tr>
-        </table>
-    </div>
 
     <div class="col-md-10 mx-auto wow fadeIn">
 
@@ -55,6 +32,14 @@
                     <tr>
                         <td><i class="fa fa-indent text-primary fa-fw"></i> Indentation Style</td>
                         <td>Tabs</td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-bullseye text-primary fa-fw"></i> Favourite IDE</td>
+                        <td>VS Code</td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-heart text-primary fa-fw"></i> Target</td>
+                        <td>Full-Stack Software Engineer</td>
                     </tr>
                 </table>
             </div>
