--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
   </div>
 
-  <a href="https://docs.google.com/gview?url=https://nuwan94.github.io/cv/CV_NuwanAlawatta.pdf" target="_blank">
+  <a href="https://docs.google.com/gview?url=https://v1.nuwan.dev/cv/CV_NuwanAlawatta.pdf" target="_blank">
     <div class="floating-btn d-none d-md-block wow tada inifinite" data-toggle="tooltip" data-placement="left"
       title="Download Resume">
       <i class="fa fa-download text-white"></i>
